gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/extra-files/test23109/object.d
version https://git-lfs.github.com/spec/v1
oid sha256:ed0d2ea4f78898437234d9084d3ff58212448d629846788ea5174bdded877f9a
size 400
